kubernetes-files/grafana-node-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: grafana-node
  name: grafana-node
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: grafana-node
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/testing_net: "true"
        io.kompose.service: grafana-node
    spec:
      containers:
      - image: grafana/grafana
        imagePullPolicy: ""
        name: grafana-node
        ports:
        - containerPort: 3000
        resources: {}
        volumeMounts:
        - mountPath: /data
          name: grafana
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: grafana
        persistentVolumeClaim:
          claimName: grafana
status: {}
