kubernetes-files/prometheus-node-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: prometheus-node
  name: prometheus-node
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: prometheus-node
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/testing_net: "true"
        io.kompose.service: prometheus-node
    spec:
      containers:
      - image: prom/prometheus
        imagePullPolicy: ""
        name: prometheus-node
        ports:
        - containerPort: 9090
        resources: {}
        volumeMounts:
        - mountPath: /data
          name: prometheus
        - mountPath: /etc/prometheus/prometheus.yml
          name: prometheus-node-claim1
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: prometheus
        persistentVolumeClaim:
          claimName: prometheus
      - name: prometheus-node-claim1
        persistentVolumeClaim:
          claimName: prometheus-node-claim1
status: {}
