kubernetes-files/substrate-node-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: substrate-node
  name: substrate-node
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: substrate-node
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/testing_net: "true"
        io.kompose.service: substrate-node
    spec:
      containers:
      - args:
        - '----prometheus-external'
        image: parity/substrate:latest
        imagePullPolicy: ""
        name: substrate-node
        ports:
        - containerPort: 30333
        - containerPort: 9933
        - containerPort: 9944
        - containerPort: 9615
        resources: {}
        volumeMounts:
        - mountPath: /data
          name: substrate
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: substrate
        persistentVolumeClaim:
          claimName: substrate
status: {}
