kubernetes-files/substrate-node-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: substrate-node
  name: substrate-node
spec:
  ports:
  - name: "30333"
    port: 30333
    targetPort: 30333
  - name: "9933"
    port: 9933
    targetPort: 9933
  - name: "9944"
    port: 9944
    targetPort: 9944
  - name: "9615"
    port: 9615
    targetPort: 9615
  selector:
    io.kompose.service: substrate-node
status:
  loadBalancer: {}
