kubernetes-files/testing_net-networkpolicy.yaml
apiVersion: extensions/v1beta1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: testing_net
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          io.kompose.network/testing_net: "true"
  podSelector:
    matchLabels:
      io.kompose.network/testing_net: "true"
